@@ -1,36 +1,43 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java Library project to get you started.
- * For more details take a look at the Java Libraries chapter in the Gradle
- * User Manual available at https://docs.gradle.org/6.0.1/userguide/java_library_plugin.html
- */
-
 plugins {
-    // Apply the java-library plugin to add support for Java Library
     id 'java-library'
 
-    // Apply the groovy plugin to also add support for Groovy (needed for Spock)
     id 'groovy'
 }
 
 repositories {
-    // Use jcenter for resolving dependencies.
-    // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
+    implementation group: 'org.kohsuke', name: 'github-api', version: '1.95'
+    
     implementation 'com.google.guava:guava:28.0-jre'
 
-    // Use the latest Groovy version for Spock testing
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.8'
 
-    // Use the awesome Spock testing and specification framework even with Java
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'junit:junit:4.12'
+}
+
+test {
+    jvmArgs = [
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util.stream=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util.function=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util.regex=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.time.temporal=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.time.chrono=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.time.format=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.nio.file=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+        '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
+        '-ea'
+    ]
 }
